src/components/UI/ToggleBurgerMenu/ToggleBurgerMenu.scss
//The mobile burger menu
.ToggleBurgerMenu {
    $self: &;
    cursor: pointer;
    user-select: none; //cannot be selected
    padding-bottom: 10px;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);

    &__bar {
        //Selector for the bars
        width: 40px;
        height: 4px;
        background-color: white;
        margin-bottom: 5px;
        border-radius: 10px;
        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.1, 1),
            background 0.5s cubic-bezier(0.77, 0.2, 0.1, 1),
            width 0.5s cubic-bezier(0.77, 0.2, 0.1, 1),
            opacity 0.5s ease;

        &--1 {
            transform-origin: 0% 0%;
        }

        &--3 {
            transform-origin: 0% 100%;
        }
    }


    //A script adds this class when clicked
    &--toggled {

        //change menu bar color
        #{$self}__bar {
            background-color: #15DFBC;
            transform: translate(3px, 0);

            //Translate bar 1 and 3 to make an x, hide bar 2
            &--1 {
                transform: rotate(45deg) translate(2px, -9px);
            }

            &--2 {
                opacity: 0;
                transform: scale(0.2, 0.2);
            }

            &--3 {
                transform: rotate(-45deg) translate(2px, 8px);
            }
        }


    }
}

//mobile menu close

